# interview-bot-ai

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/app/: constants.py  main.py
backend/app/core/: config.py  database.py  exceptions.py  logger.py  redis_client.py
backend/app/db/: qdrant.py
backend/app/features/chat/: chat_controllers.py  chat_models.py  chat_prompts.py  chat_repositories.py  chat_routes.py  chat_schemas.py  chat_services.py
backend/app/features/coaching/: coaching_routes.py  coaching_service.py
backend/app/features/interview/: interview_prompts.py  interview_routes.py  interview_service.py
backend/app/features/resume/: resume_models.py  resume_routes.py  resume_services.py
backend/app/rag/: hybrid_retriever.py  pipeline.py  reranker.py
backend/app/shared/llm/: client.py
backend/app/shared/prompts/: rephrasing_prompt.py
backend/app/shared/utils/: compliance_agent.py  domain_classifier.py  pdf_parser.py  pii_helper.py  rag_helper.py  response.py  section_parser.py  skills_extractor.py
frontend/: index.html
frontend/css/: main.css
frontend/js/: api.js  app.js
frontend/js/config/: tailwind.js
frontend/js/core/: state.js
frontend/js/features/: coaching.js  interview.js  upload.js
frontend/js/ui/: conversation.js  domElements.js  mobileSidebar.js  modal.js  sidebar.js  stateManager.js  toast.js
